@@ -1,6 +1,5 @@
 import os
 import pickle
-import warnings
 
 import numpy
 from scipy import integrate
@@ -125,13 +124,6 @@ class planarPotential(planarForce):
             raise PotentialError(
                 "'_Rforce' function not implemented for this potential"
             )
-
-    def phiforce(self, R, phi=0.0, t=0.0):
-        warnings.warn(
-            "phiforce has been renamed phitorque, because it has always really been a torque (per unit mass); please switch to the new method name, because the old name will be removed in v1.9 and may be re-used for the actual phi force component",
-            FutureWarning,
-        )
-        return self.phitorque(R, phi=phi, t=t)
 
     @potential_physical_input
     @physical_conversion("energy", pop=True)
@@ -1047,15 +1039,6 @@ def _evaluateplanarRforces(Pot, R, phi=None, t=0.0, v=None):
         raise PotentialError(
             "Input to 'evaluatePotentials' is neither a Potential-instance or a list of such instances"
         )
-
-
-@potential_positional_arg
-def evaluateplanarphiforces(Pot, R, phi=None, t=0.0, v=None):
-    warnings.warn(
-        "evaluateplanarphiforces has been renamed evaluateplanarphitorques, because it has always really been a torque (per unit mass); please switch to the new method name, because the old name will be removed in v1.9 and may be re-used for the actual phi force component",
-        FutureWarning,
-    )
-    return evaluateplanarphitorques(Pot, R, phi=phi, t=t, v=None)
 
 
 @potential_positional_arg
